cspm/cspm-platform/services/inventory-collector/output/588989875114/us-east-1/ec2_153/describe_network_acls/describe_network_acls_output_20250603_145528.json
{
  "NetworkAcls": [
    {
      "Associations": [
        {
          "NetworkAclAssociationId": "aclassoc-0f681d1be373e78f4",
          "NetworkAclId": "acl-01521968917b7e369",
          "SubnetId": "subnet-0e8de8765a2408515"
        },
        {
          "NetworkAclAssociationId": "aclassoc-031a88c1cb456df63",
          "NetworkAclId": "acl-01521968917b7e369",
          "SubnetId": "subnet-0fd37e52d59b4fc2f"
        }
      ],
      "Entries": [
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": true,
          "Protocol": "-1",
          "RuleAction": "allow",
          "RuleNumber": 100
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": true,
          "Protocol": "-1",
          "RuleAction": "deny",
          "RuleNumber": 32767
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": false,
          "Protocol": "-1",
          "RuleAction": "allow",
          "RuleNumber": 100
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": false,
          "Protocol": "-1",
          "RuleAction": "deny",
          "RuleNumber": 32767
        }
      ],
      "IsDefault": true,
      "NetworkAclId": "acl-01521968917b7e369",
      "Tags": [],
      "VpcId": "vpc-030571cdbd83ae372",
      "OwnerId": "588989875114"
    }
  ],
  "ResponseMetadata": {
    "RequestId": "34de81aa-7ea2-4697-9962-67ee1012a29f",
    "HTTPStatusCode": 200,
    "HTTPHeaders": {
      "x-amzn-requestid": "34de81aa-7ea2-4697-9962-67ee1012a29f",
      "cache-control": "no-cache, no-store",
      "strict-transport-security": "max-age=31536000; includeSubDomains",
      "content-type": "text/xml;charset=UTF-8",
      "content-length": "1415",
      "date": "Tue, 03 Jun 2025 14:55:41 GMT",
      "server": "AmazonEC2"
    },
    "RetryAttempts": 0
  }
}
